--- a/RetroManager/RetroManager.csproj
+++ b/RetroManager/RetroManager.csproj
@@ -49,41 +49,42 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompressRom.cs">
+    <Compile Include="Models\DuplicateRemover.cs" />
+    <Compile Include="ViewModels\CompressRomForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CompressRom.Designer.cs">
-      <DependentUpon>CompressRom.cs</DependentUpon>
+    <Compile Include="ViewModels\CompressRomForm.Designer.cs">
+      <DependentUpon>CompressRomForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main Menu.cs">
+    <Compile Include="ViewModels\MainMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main Menu.Designer.cs">
-      <DependentUpon>Main Menu.cs</DependentUpon>
+    <Compile Include="ViewModels\MainMenuForm.Designer.cs">
+      <DependentUpon>MainMenuForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DuplicateRemover.cs">
+    <Compile Include="ViewModels\DuplicateRemoverForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DuplicateRemover.Designer.cs">
-      <DependentUpon>DuplicateRemover.cs</DependentUpon>
+    <Compile Include="ViewModels\DuplicateRemoverForm.Designer.cs">
+      <DependentUpon>DuplicateRemoverForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedudantHelper.cs" />
-    <Compile Include="RootFolder.cs">
+    <Compile Include="ViewModels\RootFolderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RootFolder.Designer.cs">
-      <DependentUpon>RootFolder.cs</DependentUpon>
+    <Compile Include="ViewModels\RootFolderForm.Designer.cs">
+      <DependentUpon>RootFolderForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="CompressRom.resx">
-      <DependentUpon>CompressRom.cs</DependentUpon>
+    <EmbeddedResource Include="ViewModels\CompressRomForm.resx">
+      <DependentUpon>CompressRomForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DuplicateRemover.resx">
-      <DependentUpon>DuplicateRemover.cs</DependentUpon>
+    <EmbeddedResource Include="ViewModels\DuplicateRemoverForm.resx">
+      <DependentUpon>DuplicateRemoverForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main Menu.resx">
-      <DependentUpon>Main Menu.cs</DependentUpon>
+    <EmbeddedResource Include="ViewModels\MainMenuForm.resx">
+      <DependentUpon>MainMenuForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -94,8 +95,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="RootFolder.resx">
-      <DependentUpon>RootFolder.cs</DependentUpon>
+    <EmbeddedResource Include="ViewModels\RootFolderForm.resx">
+      <DependentUpon>RootFolderForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -127,5 +128,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
