Skeleton for batch process
An immediate problem is that there will need to be a lot of code changes to make it that a form pops up, the user goes through it, and then when they submit that form, once everyone is done it will then just link them to the next form.

The "easier" solution is to just make new forms that just reference the code on the older forms that will continue linking.

The "harder" solution is to somehow thread out the processes to create linking, but forms can only be loaded on the main thread.

--- a/RetroManager/RetroManager.csproj
+++ b/RetroManager/RetroManager.csproj
@@ -58,6 +58,12 @@
     <Compile Include="ViewModels\CompressRomForm.Designer.cs">
       <DependentUpon>CompressRomForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\BatchProcessForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewModels\BatchProcessForm.Designer.cs">
+      <DependentUpon>BatchProcessForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\MainMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ViewModels\DuplicateRemoverForm.resx">
       <DependentUpon>DuplicateRemoverForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewModels\BatchProcessForm.resx">
+      <DependentUpon>BatchProcessForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewModels\MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
